@@ -7,6 +7,12 @@
             <field name="inherit" ref="account_payment.payment_view_form"/>
             <field name="name">payment_form</field>
         </record>
+        <record model="ir.ui.view" id="payment_view_list">
+            <field name="model">account.payment</field>
+            <field name="type">tree</field>
+            <field name="inherit" ref="account_payment.payment_view_list"/>
+            <field name="name">payment_list</field>
+        </record>
         <record model="ir.ui.view" id="payment_journal_view_form">
             <field name="model">account.payment.journal</field>
             <field name="inherit" ref="account_payment.payment_journal_view_form"/>
