@@ -1,0 +1,6 @@
+<?xml version="1.0"?>
+<data>
+    <xpath expr="/tree" position="inside">
+        <field name="sepa_merged_id"/>
+    </xpath>
+</data>
