@@ -1,3 +1,5 @@
+* Display SEPA Merged id in list view to facilitate search when manually rejecting paiements
+
 Version 1.4 - 2015-05-29
 
 Version 1.3 - 2015-01-22
